[tool.poetry]
name = "cnc-data"
version = "0.1.0"
description = ""
authors = ["Zach Scragg <zach.scragg@prodigygame.com>"]
readme = "README.md"
packages = [{include = "cnc_data"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
plotly = "^5.13.1"
pyspark = "^3.3.2"
datetime = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
