[tool.poetry]
name = "cnc-data"
version = "0.1.0"
description = ""
authors = ["Zach Scragg <zachscragg@gmail.com>"]
readme = "README.md"
packages = [{include = "cnc_data"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.1"
plotly = "^5.13.1"
pyspark = "^3.3.2"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
